First crack at getting static html in place

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                                                 <td class="lc_dot">
                                                 </td>
                                                 <td id="lc_faq_off">
-                                                    <div id="lc_faq_off">                                                       <a id="lc_faq_off" href="./faq.php">
+                                                    <div id="lc_faq_off">                                                       <a id="lc_faq_off" href="./faq.html">
                                                             <img id="lc_faq_off" src="./css/blank.gif" /></a>
                                                     </div>
                                                 </td>
                                                 <td class="lc_dot">
                                                 </td>
                                                 <td id="lc_contact_off">
-                                                    <div id="lc_contact_off">                                                       <a id="lc_contact_off" href="./contact.php">
+                                                    <div id="lc_contact_off">                                                       <a id="lc_contact_off" href="./contact.html">
                                                             <img id="lc_contact_off" src="./css/blank.gif" /></a>
                                                     </div>
                                                 </td>
@@ -90,7 +90,7 @@
 </p>
 <p>
 Please come to one of our evening sessions at Hosmer or 
-<a href='./contact.php'>contact us</a> for more information
+<a href='./contact.html'>contact us</a> for more information
 if you are a student who like to work with a math tutor 
 or if you would like to get involved as a Catalyst math tutor.
 </p>
@@ -108,16 +108,6 @@ or if you would like to get involved as a Catalyst math tutor.
                     </tr>
                 </table>
             </div>
-        </div><!-- Start of StatCounter Code -->
-          <script type="text/javascript" language="javascript">
-          var sc_project=1578846; 
-          var sc_invisible=1; 
-          var sc_partition=14; 
-          var sc_security="f280e49c"; 
-          var sc_remove_link=1; 
-          </script>
-          <script type="text/javascript" language="javascript" src="http://www.statcounter.com/counter/counter.js"></script><noscript><img  src="http://c15.statcounter.com/counter.php?sc_project=1578846&java=0&security=f280e49c&invisible=1" alt="frontpage hit counter" border="0"> </noscript>
-          <!-- End of StatCounter Code -->
-          
+        </div>   
     </body>
 </html>
