--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
     <head>
@@ -91,7 +90,7 @@
            <td>Rachel Tollefson -- Board Member and Tutor</td>
         </tr>
         <tr>
-            <td>email: </td><td>rachel.a.tollefson@gmail.com</td>
+            <td>email: </td><td>rachel@catalystlc.org</td>
         </tr>
     </table>
 
