--- a/faq.html
+++ b/faq.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
     <head>
@@ -72,7 +71,7 @@
         <a class="lc_faq_ref1" href="#sec11">Q: What math topics can Catalyst tutors assist students with?</a>
     </div>
     <div class="lc_faq_ref1">                                                   
-        <a class="lc_faq_ref1" href="#sec22">Q: Q: What should I bring to a tutoring session?</a>
+        <a class="lc_faq_ref1" href="#sec22">Q: What should I bring to a tutoring session?</a>
     </div>
 </div>
 
