--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
     <head>
         <title>Catalyst Learning Center
         </title>
         <!-- External CSS Includes-->
-        <link rel="stylesheet" href="http://www.catalystlc.org/css/catalystlc.css" type="text/css" />
+        <link rel="stylesheet" href="./css/catalystlc.css" type="text/css" />
         <link rel="Shortcut Icon" href="./css/catalyst.ico">
         </link>
     </head>
