First crack at getting static html in place

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <title>Catalyst Learning Center
         </title>
 <!-- External CSS Includes-->
-    <link rel="stylesheet" href="http://www.catalystlc.org/css/catalystlc.css" type="text/css" />
+    <link rel="stylesheet" href="./css/catalystlc.css" type="text/css" />
         <link rel="Shortcut Icon" href="./css/catalyst.ico">
         </link>
     </head>
