--- a/faq.html
+++ b/faq.html
@@ -4,8 +4,8 @@
         <title>Catalyst Learning Center
         </title>
 <!-- External CSS Includes-->
-    <link rel="stylesheet" href="http://www.catalystlc.org/css/catalystlc.css" type="text/css" />
-    <link rel="stylesheet" href="http://www.catalystlc.org/css/lc_faq.css" type="text/css" />
+    <link rel="stylesheet" href="./css/catalystlc.css" type="text/css" />
+    <link rel="stylesheet" href="./css/lc_faq.css" type="text/css" />
         <link rel="Shortcut Icon" href="./css/catalyst.ico">
         </link>
     </head>
