--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     days when Minneapolis Public Schools are in session.  
 </p>
 <p>
-    If you are a student who like to work with a math tutor 
+    If you are a student who would like to work with a math tutor 
     or if you would like to get involved as a Catalyst math tutor, 
-    lease come to one of our evening sessions at Hosmer or 
+    please come to one of our evening sessions at Hosmer or 
     <a href='./contact.html'>contact us</a> for more information.
 </p>
                 
